# advent-of-code

./: Cargo.toml  README.md
2024/rust/: Cargo.toml  README.md  justfile
2024/rust/daily-template/: Cargo.toml
2024/rust/daily-template/src/: part1.rs  part2.rs
2024/rust/day-1/: Cargo.toml
2024/rust/day-1/benches/: benches-criterion.rs  benchmarks.rs
2024/rust/day-1/src/: part1.rs  part2.rs
2024/rust/day-10/: Cargo.toml  task.txt
2024/rust/day-10/benches/: benches-criterion.rs  benchmarks.rs
2024/rust/day-10/src/: part1.rs  part2.rs
2024/rust/day-11/: Cargo.toml  task.txt
2024/rust/day-11/benches/: benches-criterion.rs  benchmarks.rs
2024/rust/day-11/src/: part1.rs  part2.rs
2024/rust/day-12/: Cargo.toml  task.txt
2024/rust/day-12/benches/: benches-criterion.rs  benchmarks.rs
2024/rust/day-12/src/: part1.rs  part2.rs
2024/rust/day-13/: Cargo.toml  task.txt
2024/rust/day-13/benches/: benches-criterion.rs  benchmarks.rs
2024/rust/day-13/src/: part1.rs  part2.rs
2024/rust/day-14/: Cargo.toml  task.txt
2024/rust/day-14/benches/: benches-criterion.rs
2024/rust/day-14/src/: part1.rs  part2.rs
2024/rust/day-15/: Cargo.toml  task.txt
2024/rust/day-15/benches/: benches-criterion.rs
2024/rust/day-15/src/: part1.rs  part2.rs
2024/rust/day-2/: Cargo.toml
2024/rust/day-2/benches/: benches-criterion.rs  benchmarks.rs
2024/rust/day-2/src/: part1.rs  part2.rs
2024/rust/day-3/: Cargo.toml
2024/rust/day-3/benches/: benches-criterion.rs  benchmarks.rs
2024/rust/day-3/src/: part1.rs  part2.rs
2024/rust/day-4/: Cargo.toml
2024/rust/day-5/: Cargo.toml
2024/rust/day-6/: Cargo.toml
2024/rust/day-7/: Cargo.toml
2024/rust/day-8/: Cargo.toml  task.txt
2024/rust/day-9/: Cargo.toml  task.txt
(+160 files in other folders)
