[workspace]
resolver = "2"

members = ["day-*"]         #, "www"]
default-members = ["day-*"]

[workspace.dependencies]
glam = "0.29.2"
itertools = "0.13.0"
nom = "7.1.3"
petgraph = "0.6.5"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
divan = "0.1.16"
tracing-tracy = "0.11.3"
tracy-client = "0.17.4"
tracy-client-sys = "0.24.2"
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0.3"
dhat = "0.3.3"
criterion = { version = "0.5", features = ["html_reports"] }
nom_locate = { version = "4.2.0" }

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
